name:               lens-constraints
version:            0.0.1
license:            OtherLicense
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Edward A. Kmett
maintainer:         Tony Morris
copyright:          Copyright (c) 2017 Tony Morris, Edward A. Kmett
synopsis:           Generalisation of optics using constraint kinds
category:           Data, Lenses
description:        Generalisation of optics using constraint kinds
homepage:           https://github.com/ekmett/lens-constraints
bug-reports:        https://github.com/ekmett/lens-constraints/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog
tested-with:        GHC == 8.0.1

source-repository   head
  type:             git
  location:         git@github.com:ekmett/lens-constraints.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , lens >= 4.15 && < 5  
                    , constraints >= 0.9 && < 1

  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Lens.Constraints
                    
test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1
                    , quickcheck-text

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
